# demo-technology-exploration

./: README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
demos/: script.sql
demos/_template/: README.md
demos/agent_skills/: README.md
demos/agent_skills/examples/personal-skill/explain-code/: SKILL.md
demos/agno-workflows/: .gitignore  Dockerfile  README.md  Taskfile.yml  compose.yaml  pyproject.toml
demos/agno-workflows/config/: access.yml
demos/agno-workflows/config/agents/: customer-demographic-master.yml  inventory-snapshot.yml  sales-transaction-ledger.yml
demos/agno-workflows/db/: init.sql
demos/agno-workflows/src/: server.py  workflow.py
demos/claude_mcp/: Dockerfile  README.md  main.py  pyproject.toml
demos/claude_mcp/store/: inventory_items.txt  inventory_staff.txt
demos/postgres_mcp/: .gitignore  README.md  docker-compose.yml
demos/postgres_mcp/dbt_demo/: .user.yml  Makefile  README.md  project_config.yaml  requirements.txt
demos/postgres_mcp/dbt_demo/dbt/: dbt_project.yml  profiles.yml
demos/postgres_mcp/mcp_demo/: Makefile  requirements.txt  server.py
demos/postgres_mcp/pgadmin-config/admin@admin.com/: servers.json
demos/pyairbyte_mindsb/: .gitignore  Dockerfile  Makefile  README.md  SLACK_SETUP.md  demo.py  docker-compose.yml  env.example  mindsdb.Dockerfile  requirements.txt  setup.sh
demos/pyairbyte_mindsb/database/: init.sql
demos/pyairbyte_mindsb/mindsdb_queries/: chatbot_agent  knowledge_base  slack_setup
demos/pyairbyte_mindsb/src/: airbyte_client.py  setup_mindsdb.py
(+19 files in other folders)
